# VkNRC

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: windows-mingw.yml  windows-msvc.yml
config/: h1.json  h2.json  h3.json  h4.json  h5.json  w32.json
config/ext/: default_nrc.json
dep/: CMakeLists.txt
dep/MyVK/: CMakeLists.txt  README.md
dep/MyVK/include/myvk/: ASBuffer.hpp  AccelerationStructure.hpp  Allocator.hpp  Buffer.hpp  BufferBase.hpp  CommandBuffer.hpp  CommandPool.hpp  ComputePipeline.hpp  DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  Device.hpp  ExportBuffer.hpp  Fence.hpp  FrameManager.hpp  Framebuffer.hpp  GraphicsPipeline.hpp  Image.hpp  ImageView.hpp  ImagelessFramebuffer.hpp  Instance.hpp  PhysicalDevice.hpp  PipelineLayout.hpp  Ptr.hpp  QueryPool.hpp  Queue.hpp  RenderPass.hpp  Sampler.hpp  Semaphore.hpp  ShaderModule.hpp  Surface.hpp  Swapchain.hpp  SwapchainImage.hpp
dep/MyVK/include/myvk_rg/: RenderGraph.hpp
dep/MyVK/include/myvk_rg/executor/: Executor.hpp
dep/MyVK/include/myvk_rg/interface/: Alias.hpp  Event.hpp  Input.hpp  InputPool.hpp  Key.hpp  Object.hpp  Pass.hpp  Pool.hpp  RenderGraph.hpp  Resource.hpp  ResourcePool.hpp  ResourceType.hpp  ResultPool.hpp  Usage.hpp
dep/MyVK/include/myvk_rg/pass/: BufferFillPass.hpp  ImGuiPass.hpp  ImageBlitPass.hpp
dep/MyVK/include/myvk_rg/resource/: AccelerationStructure.hpp  InputBuffer.hpp  InputImage.hpp  StaticBuffer.hpp  StaticImage.hpp  SwapchainImage.hpp
dep/MyVK/src/: ASBuffer.cpp  AccelerationStructure.cpp  Allocator.cpp  Buffer.cpp  Device.cpp  ExportBuffer.cpp  PhysicalDevice.cpp  ShaderModule.cpp
dep/MyVK/src/glfw/: FrameManager.cpp
dep/MyVK/src/rg/executor/: Barrier.hpp  Graph.hpp  GraphAlgo.hpp  Hash.hpp  Relation.hpp  VkHelper.hpp
dep/MyVK/src/rg/executor/default/: Collection.cpp  Collection.hpp  Dependency.cpp  Dependency.hpp  Error.hpp  Executor.cpp  Info.hpp  Metadata.cpp  Metadata.hpp  Schedule.cpp  Schedule.hpp  VkAllocation.cpp  VkAllocation.hpp  VkCommand.cpp  VkCommand.hpp  VkDescriptor.cpp  VkDescriptor.hpp  VkRunner.cpp  VkRunner.hpp
dep/MyVK/src/rg/interface/: Alias.cpp  Input.cpp  Object.cpp  Pass.cpp  Resource.cpp
dep/glm/: CMakeLists.txt
dep/half/: CMakeLists.txt
dep/stb_image/: CMakeLists.txt
dep/tiny-cuda-nn/: CMakeLists.txt
dep/tiny-cuda-nn/dependencies/fmt/: CMakeLists.txt
dep/tinyobjloader/: CMakeLists.txt
loss/: default_living_room.csv  default_san.csv  default_sponza.csv  h1_san.csv  h1_sponza.csv  h2_san.csv  h2_sponza.csv  h3_san.csv  h3_sponza.csv  h4_san.csv  h4_sponza.csv  plot.py  w32_living_room.csv  w32_san.csv  w32_sponza.csv
shader/: CMakeLists.txt
shader/src/: Config.glsl  Constant.glsl  CookTorranceBRDF.glsl  LambertBRDF.glsl  NNGradient.glsl  NNInference.glsl  NNOptimize.glsl  NN_nv.glsl  NRCRecord.glsl  RNG.glsl  Sample.glsl  Scene.glsl  nrc_adam.comp  nrc_evaluate.comp  nrc_gradient.comp  nrc_gradient_16.comp  nrc_gradient_32.comp  nrc_gradient_64.comp  nrc_indirect.comp  nrc_inference.comp  nrc_inference_128.comp  nrc_inference_16.comp  nrc_inference_32.comp  nrc_inference_64.comp  nrc_optimize.comp  nrc_optimize_use.comp  nrc_train_indirect.comp  nrc_train_prepare.comp  path_tracer.comp  path_tracer.frag  path_tracer.vert  reconstruct.comp  screen.frag  screen.vert  vbuffer.frag  vbuffer.vert
src/: AABB.hpp  BlueNoise.cpp  BlueNoise.hpp  Camera.cpp  Camera.hpp  CuNRCNetwork.cu  CuNRCNetwork.hpp  CuNRCState.cu  CuNRCState.hpp  CuVkBuffer.cu  CuVkBuffer.hpp  NRCState.cpp  NRCState.hpp  Scene.cpp  Scene.hpp  Sobol.cpp  Sobol.hpp  VkAccelScene.cpp  VkAccelScene.hpp  VkNRCResource.cpp  VkNRCResource.hpp  VkNRCState.cpp  VkNRCState.hpp  VkRTScene.cpp  VkRTScene.hpp  VkScene.cpp  VkScene.hpp  VkSceneBLAS.cpp  VkSceneBLAS.hpp  VkSceneTLAS.cpp  VkSceneTLAS.hpp  VkSceneView.cpp  VkSceneView.hpp  main.cpp
src/rg/: NNDispatch.hpp  NNGradient.cpp  NNGradient.hpp  NNGradientShader.cpp  NNGradientShader.hpp  NNInference.cpp  NNInference.hpp  NNInferenceShader.cpp  NNInferenceShader.hpp  NNTrain.cpp  NNTrain.hpp  NNTrainDispatch.hpp  NRCRenderGraph.cpp  NRCRenderGraph.hpp  NRCResources.hpp  PTRenderGraph.cpp  PTRenderGraph.hpp  PathTracerPass.cpp  PathTracerPass.hpp  ReconstructPass.cpp  ReconstructPass.hpp  ReconstructRenderGraph.cpp  ReconstructRenderGraph.hpp  SceneResources.hpp  ScreenPass.cpp  ScreenPass.hpp  ScreenRenderGraph.cpp  ScreenRenderGraph.hpp  VBufferPass.cpp  VBufferPass.hpp
test/: CMakeLists.txt  NN_nv.glsl  build_kernel.sh  evaluate.comp  evaluate_32.spv  evaluate_64.spv  evaluate_NV.comp  evaluate_old.comp  main.cpp  train_32.spv  train_NV.comp
test/mlp_learning_an_image/: build_kernel.sh  gradient.comp  gradient_32.spv  inference.comp  inference_32.spv  main.cpp  optimize.comp  optimize_32.spv
test/vuda/: vuda.hpp
test/vuda/api/: devicemgr.hpp  eventmgr.hpp  memmgr.hpp  streammgr.hpp  vudakernel.hpp
test/vuda/setup/: debug.hpp  setup.hpp  types.hpp
test/vuda/state/: binarysearchtree.hpp  instance.hpp  interfacelogicaldevices.hpp  kernelprogram.hpp  kernelprogram.inl  logicaldevice.hpp  logicaldevice.inl  specialization.hpp  thrdcmdpool.hpp  threadinfo.hpp  vulkanfunc.hpp
